--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "@types/node": "^17.0.17",
     "nodemon": "^2.0.15",
     "ts-node": "^10.5.0",
+    "tsc": "^2.0.4",
     "typescript": "^4.5.5"
   },
   "dependencies": {
