--- a/backend/package.json
+++ b/backend/package.json
@@ -17,7 +17,6 @@
     "@types/node": "^17.0.17",
     "nodemon": "^2.0.15",
     "ts-node": "^10.5.0",
-    "tsc": "^2.0.4",
     "typescript": "^4.5.5"
   },
   "dependencies": {
@@ -25,6 +24,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.2",
-    "scrape-it": "^5.3.2"
+    "scrape-it": "^5.3.2",
+    "tsc": "^2.0.4"
+
   }
 }
