--- a/backend/package.json
+++ b/backend/package.json
@@ -18,14 +18,13 @@
     "nodemon": "^2.0.15",
     "ts-node": "^10.5.0",
     "typescript": "^4.5.5"
+
   },
   "dependencies": {
     "axios": "^0.25.0",
     "cors": "^2.8.5",
-    "dotenv": "^16.0.0",
     "express": "^4.17.2",
-    "scrape-it": "^5.3.2",
-    "tsc": "^2.0.4"
+    "scrape-it": "^5.3.2"
 
   }
 }
