--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -9,6 +9,7 @@
       "outDir": "dist",
       "baseUrl": "./src",
       "rootDir": "./src",
+      "strict": true,
 
       "paths": {
           "*": [
